<resources>
    <string name="app_name">KUserList</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="cancle">Cancle</string>
    <string name="no_data_found">No Data Found</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ??</string>
    <string name="login">Login</string>
    <string name="noaccount">Don\'t have an account ?? Register</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reading">Reading</string>
    <string name="programming">Programming</string>
    <string name="dancing">Dancing</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="register">Register</string>
    <string name="haveaccount">Already have an account ?? LOGIN</string>
    <string name="here">Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="theme">Theme</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="search">Search</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="log_out">Log Out</string>
    <string name="delete_all">Delete All</string>
    <string name="sort">Sort</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="last_modified">Last modified</string>
    <string name="last_inserted">Last Inserted</string>
</resources>