<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="false"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="@dimen/_30sdp"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here"
        android:layout_marginTop="@dimen/_6sdp"
        android:textColor="#373839"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include"
        layout="@layout/customlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintVertical_bias="0.08999"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/inputLayoutpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000000"
        android:textColorHint="#454343"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="@dimen/_7sdp"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="@dimen/_15sdp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/inputLayoutConfirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/confirm_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000000"
        android:textColorHint="#454343"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutpass">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="@dimen/_7sdp"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="@dimen/_15sdp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutgender"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmpass">

    <RadioGroup
        android:id="@+id/radiogender"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginEnd="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
    </RadioGroup>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayouthobby"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutgender">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp" />
            <CheckBox
                android:id="@+id/check2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/programming"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp" />
            <CheckBox
                android:id="@+id/check3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dancing"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutdob"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayouthobby">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/date_of_birth"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
            <TextView
                android:id="@+id/showdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text=""
                android:ems="8"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp" />
            <Button
                android:id="@+id/pickdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_calendar_month_24"
                android:backgroundTint="#FFF"
                android:drawableTint="#000"
                android:textColor="#000" />
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/inputLayoutregisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_46sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_46sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutdob">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/register"
            android:textSize="@dimen/_15sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/createtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/haveaccount"
        android:textColor="#5C5A5C"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutregisterBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
