<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:src="@drawable/baseline_account_circle_24"
        app:civ_border_width="@dimen/_2sdp"
        app:civ_border_color="#FF000000"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/customlayout"
        android:id="@+id/include2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintVertical_bias="0.08999"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutgender1"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textSize="@dimen/_20sdp" />

        <RadioGroup
            android:id="@+id/radiogender1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"
                android:onClick="RadioButtonClicked"
                android:layout_marginEnd="@dimen/_30sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp" />

            <RadioButton
                android:id="@+id/female1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:checked="true"
                android:onClick="RadioButtonClicked"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp" />
        </RadioGroup>
    </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/inputLayoutregisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_46sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_46sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutgender1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_weight="1"
            app:backgroundTint="#104704"
            android:text="@string/submit"
            android:layout_marginEnd="@dimen/_3sdp"
            android:textSize="@dimen/_15sdp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_10sdp"
                android:layout_weight="1"
                app:backgroundTint="#104704"
                android:text="@string/edit"
                android:layout_marginEnd="@dimen/_3sdp"
                android:visibility="gone"
                android:textSize="@dimen/_15sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/cancle"
            app:backgroundTint="#FFDC1728"
            android:layout_marginStart="@dimen/_3sdp"
            android:textSize="@dimen/_15sdp"/>

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>